SERVER-17898 Add logging of config server check failures

This does not actually fix the bug, but helps narrow down the exact
nature of these intermittent failures.